<resources>
    <string name="app_name">Lifeinsport</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lifeinsport</string>
    <string name="nav_header_subtitle">lifeinsport.site</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="LastNews">Наш Футбол</string>
    <string name="table">РПЛ</string>
    <string name="myteam">Lifeinsport</string>
    <string name="mygame">Бундеслига</string>
    <string name="calendar">Календарь</string>
    <string name="Title">welcome to Lifeinsport</string>
    <string name="Communicate">Спортивные события</string>
    <string name="hockey">Хоккей</string>
    <string name="tennis">Настольный теннис</string>
    <string name="footbal">Футбол</string>
    <string name="basketball">Баскетбол</string>
    <string name="valeybal">Волейбол</string>
    <string name="UFC">UFC</string>
    <string name="formula">Формула 1</string>
    <string name="motosport">Мото Спорт</string>
    <string name="USfootbal">Американский футбол</string>
    <string name="baseball">Бейсбол</string>
    <string name="velosport">Велоспорт</string>
    <string name="boks">Бокс</string>
    <string name="golf">Гольф</string>
    <string name="gandball">Гандбол</string>
    <string name="darts">Дартс</string>
    <string name="cibersport">Киберспорт</string>
    <string name="biatlon">Биатлон</string>
    <string name="Zima">Зимние виды спорта</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="hock">История и развитие хоккея</string>
    <string name="spoooort">Собственно говоря, слово – «хоккей», согласно одной из версия, образовалось от старинного французкого слова «хокэ», означающего не что иное, как «изогнутый пастуший посох». По другой, наиболее известной версии, слово – «хоккей», зародилось еще в Рыцарской Англии, где проводился карнавал уборки урожая по названием «хауки» или «хоки», во времена которого проводились забавы и, сущностью состязания было сопроводить мяч в зону соперника меандрическими палочками.Так же знаменита и третья версия, совпадающая с английской. Она берет свое начало в Северной Америке, а конкретно, из языка могиканского племени Мохоки, игравшего в подобную забаву под названием «хогий».
        Как и с названием игры, с её историей отнюдь не всё очевидно. Есть различные версии, профессионалы полемизируют до сих пор, аргументируя сопричастность той или иной страны к одной из самых популярных игр современности. Основная масса профессионалов не сомневаются лишь в одном. Прародителем зимнего вида спорта с шайбой стал хоккей на траве. Ещё с эпохи Древней Греции была знаменита игра под названием «файнинда», в которой два состязающихся атлета с маленькими меандрическими палочками сражаются за мяч.
        Огромное распространение она нашла на границе VIII – VII веков до нашей эры в Спарте и, в том числе была запечатлена на барельефе стены Фемистокла, прозванной так в честь одного из основоположников афинской демократии.</string>
    <string name="ten">История и развитие тенниса</string>
    <string name="tenni">Игры, как исторически сложившееся явление возникли в глубокой древности, и представляют собой самостоятельный вид деятельности, свойственный человеку. В значительной мере своим становлением человек обязан игре. Из истории спорта, особенно игровых видов, известно, насколько многолик и интересен мир игр.Как показывает история человечества, возникновение и применение игр в процессе жизнедеятельности относится уже к начальному этапу становления человека. История свидетельствует, что уже в Древнем Египте и Древней Греции игры были превращены в одно из самых активных средств воспитания. И тогда же начали проявляться интересы господствующих классов в использовании игр, с течением времени превратившихся в средство приобщения юного поколения к господствующей классовой идеологии. Характерным этапом в развитии игр следует считать появление площадок для игр и турниров в Х-ХI вв. (эпоха средневековья). Названия многих игр в мяч указывают на их французское происхождение, а некоторых – на испанское или итальянское.
        Из всех многочисленных старинных игр с мячом родоначальником тенниса историки спорта называют тригон , известный со времен Древнего Рима, когда маленький твердый шар перебрасывался с одной стороны площадки на другую.</string>
    <string name="fot">История и развитие футбола</string>
    <string name="foot">Точной даты возникновения футбола не известно, но можно с уверенностью сказать, что история футбола насчитывает не одно столетие и затронула немало стран. Игры с мячом были популярны на всех континентах, об этом говорят повсеместные находки археологов. В Древнем Китае существовала игра, известная как «Цуцзюй», упоминания о которой были датированы вторым веком до нашей эры. По заявлению ФИФА в 2004 году, именно она считается наиболее древней из предшественников современного футбола.В Японии подобная игра носила название «Кемари» (в некоторых источниках «Кенатт»). Первое упоминание о Кемари встречается в 644 году нашей эры. В Кэмари играют и в наше время в синтоистских святилищах во время фестивалей. В Австралии мячи делали из шкур крыс, мочевых пузырей крупных животных, из скрученных волос. К сожалению, правил игры не сохранилось. В Северной Америке тоже был предок футбола, игра называлась «pasuckuakohowog», что означает «они собрались, чтобы поиграть в мяч ногами». Обычно игры проходили на пляжах, мяч пытались забить в ворота шириной около полумили, само же поле было в два раз длиннее. Число участников игры доходило до 1000 человек.</string>
    <string name="basket">История и развитие баскетбола</string>
    <string name="bas">Баскетбол (от англ. basket — корзина, ball — мяч) – олимпийский вид спорта, спортивная командная игра с мячом, цель в которой — забросить мяч в корзину соперника большее число раз, чем это сделает команда соперника в установленное время. Каждая команда состоит из 5 полевых игроков.В 1891 году в Соединенных Штатах Америки молодой преподаватель, уроженец Канады, доктор Джеймс Нейсмит, пытаясь “оживить” уроки по гимнастики, прикрепил две корзины из-под фруктов к перилам балкона и предложил забрасывать туда футбольные мячи. Получившаяся игра лишь отдаленно напоминала современный баскетбол. Ни о каком ведении даже речи не шло, игроки перекидывали мяч друг другу и затем пытались закинуть его в корзину. Побеждала команда, забросившая большее количество мячей. Через год Нейсмит разработал первые правила игры в баскетбол. Первые же матчи по этим правилам вызвали и первые их изменения.Постепенно баскетбол из США проник сначала на Восток – Японию, Китай, Филиппины, а потом в Европу и Южную Америку. Через 10 лет на Олимпийских играх в Сент-Луисе американцы организовали показательный тур между командами нескольких городов. В 1946 году возникла Баскетбольная ассоциация Америки (БAA). Первый матч под её эгидой состоялся 1 ноября того же года в Торонто между командами Toronto Huskies и New York Knickerbockers. В 1949 году, ассоциация объединилась с Национальной баскетбольной лигой США, в результате чего была образована Национальная баскетбольная ассоциация (NBA). В 1967 году, была создана Американская баскетбольная ассоциация, которая долгое время пыталась составить конкуренцию NBA, но спустя 9 лет объединилась с ней. На сегодняшний день NBA является одной из наиболее влиятельных и известных профессиональных баскетбольных лиг в мире. </string>
    <string name="ufc">История и развитие UFC</string>
    <string name="ufcc">Ultimate Fighting Championship(UFC) (Абсолютный бойцовский чемпионат) - американская компания по продвижению смешанных боевых искусств, базирующаяся в Лас-Вегасе, штат Невада, которая принадлежит и управляется материнской компанией William Morris Endeavour.Это крупнейшая в мире компания по продвижению ММА, в которой представлены бойцы самого высокого уровня. UFC проводит мероприятия по всему миру, которые демонстрируют двенадцать весовых категорий и соблюдают Единые правила смешанных единоборств.Изначально UFC задумывалась создателями как одноразовый турнир, позволяющий определить самое эффективное боевое искусство, и напоминала ранние бразильские состязания по вале-тудо (что угодно). Целью ранних соревнований Ultimate Fighting Championship было определение наиболее эффективного боевого искусства в соревновании с минимальными правилами и без весовых категорий между участниками различных боевых дисциплин, таких как бокс, бразильское джиу-джитсу, самбо, борьба, муай тай, каратэ и дзюдо.В последующих событиях бойцы начали применять эффективные приемы из более чем одной дисциплины, что косвенно помогло создать совершенно отдельный стиль борьбы, известный как современные смешанные боевые искусства.Основанная в 1993 году как профессиональная организация по смешанным боевым искусствам (MMA), UFC произвела революцию в боевом бизнесе и сегодня выступает в качестве мирового лидера в области спортивных брендов, медиа-компании и крупнейшего в мире провайдера мероприятий с оплатой за просмотр (PPV).</string>
    <string name="lasnews">История развития футбола в России</string>
    <string name="last">Футбол в России – один из популярнейших видов спорта. Каждый год множество ребятишек начинают свой футбольный путь, записываясь в юношеские академии. Российская сборная в большинстве случаев удачно выступает в квалификационных турнирах на мировое или европейское первенство. Нынешнее поколение начинающих игроков и болельщиков, к сожалению, не знает славную историю нашего футбола.</string>
    <string name="lass">Футбол в России начал зарождаться еще в конце позапрошлого столетия, а точнее в 1897 году. Как раз тогда состоялся первый поединок. В нем приняли участие «Василевское сообщество футболистов» и «Спорт». Победа в состязании досталась первой команде с разгромным счетом 6:0. На тот момент правила еще не придумали, а игроки просто гоняли самодельный мяч и стремились затолкать его в ворота. Тот поединок трудно назвать полноценным матчем, но он послужил отправной точкой для развития футбола в России.</string>
    <string name="lastne">Первые шаги</string>
    <string name="lastnewss">Формирование футбольных лиг</string>
    <string name="lasstt">Россиянам игра пришлась по душе – футболисты наслаждались матчами, а болельщики – зрелищем. Вследствие этого на заре 20 столетия в больших российских городах начали проводиться чемпионаты. В Санкт-Петербурге была основана футбольная лига Санкт–Петербурга, а через десятилетие подобные команды начали появляться в других больших городах. Революция, как ни странно, оказала позитивное влияние на развитие футбола в стране. В 1923 году был сыгран первый чемпионат России, участниками которого стали городские команды. Прошло немного времени, и лучшие игроки образовали сборную команду России. В 1936 году появился новый турнир, получивший название Кубок России, который проводится и в наше время. В Кубке страны принимают участие команды, представляющие все лиги.</string>
    <string name="lassttnn">Успехи наших дней</string>
    <string name="lastnews1">2 декабря 2010 года Российская федерация футбола в ожесточенной борьбе с конкурентами выиграла тендер на проведение Чемпионата мира по футболу 2018 года. Это событие автоматически повысило интерес к игре в нашей стране. В городах, которые будут принимать матчи мирового чемпионата, начали возводиться современные стадионы, дороги, аэропорты, гостиницы и прочие элементы инфраструктуры. В прошлом году состоялась так называемая генеральная репетиция грядущего мирового первенства – Кубок Конфедераций. И, хотя наши футболисты показали откровенно слабую игру, поклонники этого вида спорта получили истинное удовольствие от просмотра матчей с лучшими командами планеты.</string>
</resources>