<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.Lifeinsport.fragments.velosportFragment">

    android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="93dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/lasnews"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="20dp"
                android:text="@string/last"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/lastne"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="216dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/fotoros" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/lass"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/lastnewss"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="25sp" />
            <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/fotlast" />

            <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="964dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/lasstt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="25dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/lassttnn"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="432dp"
                android:layout_height="283dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/ladtnewssf" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="910dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/lastnews1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="25dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>